Fix star contrast

--- a/star_ratings/static/star-ratings/css/star-ratings.css
+++ b/star_ratings/static/star-ratings/css/star-ratings.css
@@ -113,7 +113,7 @@
 
 /* line 93, ../sass/star-ratings.scss */
 .star-ratings-result {
-  background-image: url('data:image/svg+xml;utf8,<svg fill="%23999999" width="32px" viewBox="0 0 560 560" xmlns="http://www.w3.org/2000/svg"><path d="M512 198.525l-176.89-25.704-79.11-160.291-79.108 160.291-176.892 25.704 128 124.769-30.216 176.176 158.216-83.179 158.216 83.179-30.217-176.176 128.001-124.769z"></path></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23999999" width="32px" viewBox="0 0 560 560" xmlns="http://www.w3.org/2000/svg"><path stroke="%23000" stroke-width="30" d="M512 198.525l-176.89-25.704-79.11-160.291-79.108 160.291-176.892 25.704 128 124.769-30.216 176.176 158.216-83.179 158.216 83.179-30.217-176.176 128.001-124.769z"></path></svg>');
   width: 320px;
   height: 32px;
   display: block;
@@ -125,7 +125,7 @@
 
 /* line 104, ../sass/star-ratings.scss */
 .star-ratings-result span {
-  background-image: url('data:image/svg+xml;utf8,<svg fill="%23f9b705" width="32px" viewBox="0 0 560 560" xmlns="http://www.w3.org/2000/svg"><path d="M512 198.525l-176.89-25.704-79.11-160.291-79.108 160.291-176.892 25.704 128 124.769-30.216 176.176 158.216-83.179 158.216 83.179-30.217-176.176 128.001-124.769z"></path></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23f9b705" width="32px" viewBox="0 0 560 560" xmlns="http://www.w3.org/2000/svg"><path stroke="%23000" stroke-width="30" d="M512 198.525l-176.89-25.704-79.11-160.291-79.108 160.291-176.892 25.704 128 124.769-30.216 176.176 158.216-83.179 158.216 83.179-30.217-176.176 128.001-124.769z"></path></svg>');
   width: 0px;
   height: 32px;
   display: block;
